[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/Enemie.gd" type="Script" id=1]
[ext_resource path="res://Enemies/EnemieSM.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Enemiee.png" type="Texture" id=3]
[ext_resource path="res://Enemies/view.png" type="Texture" id=4]
[ext_resource path="res://Sounds/hey.wav" type="AudioStream" id=5]
[ext_resource path="res://Effects/Particles/RunParticle.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/Run.wav" type="AudioStream" id=7]
[ext_resource path="res://Enemies/EnemieAnimation.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.42743, 7.0406 )

[sub_resource type="CircleShape2D" id=2]
radius = 30.5981

[node name="Enemie" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="EnemieSM" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 0, -8 )
hframes = 5
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." instance=ExtResource( 8 )]

[node name="WanderTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="Rays" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="Rays"]
visible = false
position = Vector2( -4.88994, 6.4519 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="Right" type="RayCast2D" parent="Rays"]
visible = false
position = Vector2( 5.20197, 6.4519 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 5.0
shadow_enabled = true

[node name="Hey" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="Run" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
pitch_scale = 1.7
max_distance = 125.0

[node name="RunParticlePivot" type="Position2D" parent="."]
position = Vector2( 0, 6.754 )

[node name="RunParticle" parent="RunParticlePivot" instance=ExtResource( 6 )]
position = Vector2( -4.90002, 0 )
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
[connection signal="finished" from="Run" to="." method="_on_Run_finished"]
